# enwords

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
data/: config.example.toml  dict_template.xlsx
data/dict/: en-zh.json
docs/: API.md  ARCHITECTURE.md  COMPLETION_SUMMARY.md  DATABASE.md  DEVELOPMENT_TODO.md  EXCEL_IMPORT.md  FEATURE_CHECKLIST.md  FINAL_COMPLETION_SUMMARY.md  FINAL_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  USAGE.md  USER_GUIDE.md  代码审查与开发计划.md  功能开发完成总结.md  开发任务清单.md  设计文档.md  问题清单速览.md
scripts/: create_database.sql  create_excel_template.py  diagnose.py  import_dict.py  import_from_excel.py  init_database.py  setup_dev.py  test_hotkey.py  test_simple_hotkey.py  test_tray.py
src/: __init__.py  __main__.py
src/core/: ai_translator.py  clipboard_monitor.py  hotkey_manager.py  language_detector.py  local_dict_translator.py  ocr_extractor.py  online_dict_translator.py  pronunciation.py  review_algorithm.py  smart_router.py  text_extractor.py  translator_factory.py  translator_interface.py
src/data/: __init__.py  blacklist_repository.py  database.py  models.py  repository.py  tag_repository.py
src/services/: __init__.py  backup_service.py  context_service.py  export_service.py  review_service.py  translation_service.py
src/ui/: __init__.py  entry_detail_dialog.py  main_window.py  popup_window.py  review_window.py  screenshot_window.py  settings_dialog.py  statistics_window.py  tray_icon.py
src/utils/: activity_tracker.py  config_loader.py  logger.py
